package auth

import (
	"context"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"go.uber.org/zap"
)

// AuthService implements the gRPC authentication service
type AuthService struct {
	logger *zap.Logger
	// Add other dependencies
}

// NewAuthService creates a new authentication service
func NewAuthService(logger *zap.Logger) *AuthService {
	return &AuthService{
		logger: logger,
	}
}

// RegisterService registers the service with a gRPC server
func (s *AuthService) RegisterService(server *grpc.Server) {
	RegisterAuthServer(server, s)
}

// Authenticate handles authentication requests
func (s *AuthService) Authenticate(ctx context.Context, req *AuthenticateRequest) (*AuthenticateResponse, error) {
	// Validate request
	if req == nil {
		return nil, status.Error(codes.InvalidArgument, "request cannot be nil")
	}

	// TODO: Implement authentication logic
	// This would involve:
	// 1. Validating credentials
	// 2. Checking MFA requirements
	// 3. Generating session tokens
	// 4. Recording audit logs

	return &AuthenticateResponse{
		Token: "dummy-token",
		ExpiresAt: time.Now().Add(24 * time.Hour).Unix(),
	}, nil
}

// ValidateToken validates an authentication token
func (s *AuthService) ValidateToken(ctx context.Context, req *ValidateTokenRequest) (*ValidateTokenResponse, error) {
	if req == nil || req.Token == "" {
		return nil, status.Error(codes.InvalidArgument, "invalid token")
	}

	// TODO: Implement token validation
	// This would involve:
	// 1. Verifying token signature
	// 2. Checking token expiration
	// 3. Validating token claims
	// 4. Checking token revocation status

	return &ValidateTokenResponse{
		Valid: true,
		User: &User{
			Id: "dummy-user-id",
			Email: "user@example.com",
		},
	}, nil
}

// RegisterPasskey initiates passkey registration
func (s *AuthService) RegisterPasskey(ctx context.Context, req *RegisterPasskeyRequest) (*RegisterPasskeyResponse, error) {
	if req == nil || req.UserId == "" {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	// TODO: Implement passkey registration
	// This would involve:
	// 1. Generating registration options
	// 2. Storing registration session
	// 3. Returning options to client

	return &RegisterPasskeyResponse{
		Options: &PasskeyOptions{
			Challenge: "dummy-challenge",
			RpId: "auth.polyid.io",
			RpName: "PolyID",
		},
	}, nil
}

// VerifyPasskey verifies a passkey registration
func (s *AuthService) VerifyPasskey(ctx context.Context, req *VerifyPasskeyRequest) (*VerifyPasskeyResponse, error) {
	if req == nil || req.UserId == "" || req.Credential == nil {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	// TODO: Implement passkey verification
	// This would involve:
	// 1. Verifying attestation
	// 2. Storing credential
	// 3. Recording audit log

	return &VerifyPasskeyResponse{
		Success: true,
	}, nil
}

// AddMFAMethod adds a new MFA method
func (s *AuthService) AddMFAMethod(ctx context.Context, req *AddMFAMethodRequest) (*AddMFAMethodResponse, error) {
	if req == nil || req.UserId == "" || req.Method == "" {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	// TODO: Implement MFA method addition
	// This would involve:
	// 1. Validating method type
	// 2. Generating setup data
	// 3. Storing temporary state

	return &AddMFAMethodResponse{
		SetupData: &MFASetupData{
			Type: req.Method,
			Data: "dummy-setup-data",
		},
	}, nil
}

// VerifyMFAMethod verifies an MFA method setup
func (s *AuthService) VerifyMFAMethod(ctx context.Context, req *VerifyMFAMethodRequest) (*VerifyMFAMethodResponse, error) {
	if req == nil || req.UserId == "" || req.Method == "" || req.Code == "" {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	// TODO: Implement MFA method verification
	// This would involve:
	// 1. Validating verification code
	// 2. Storing verified method
	// 3. Recording audit log

	return &VerifyMFAMethodResponse{
		Success: true,
	}, nil
}

// RemoveMFAMethod removes an MFA method
func (s *AuthService) RemoveMFAMethod(ctx context.Context, req *RemoveMFAMethodRequest) (*RemoveMFAMethodResponse, error) {
	if req == nil || req.UserId == "" || req.MethodId == "" {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	// TODO: Implement MFA method removal
	// This would involve:
	// 1. Validating user ownership
	// 2. Removing method
	// 3. Recording audit log

	return &RemoveMFAMethodResponse{
		Success: true,
	}, nil
}

// GetMFAMethods retrieves a user's MFA methods
func (s *AuthService) GetMFAMethods(ctx context.Context, req *GetMFAMethodsRequest) (*GetMFAMethodsResponse, error) {
	if req == nil || req.UserId == "" {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	// TODO: Implement MFA methods retrieval
	// This would involve:
	// 1. Retrieving methods from storage
	// 2. Filtering sensitive data
	// 3. Returning method list

	return &GetMFAMethodsResponse{
		Methods: []*MFAMethod{
			{
				Id: "dummy-method-id",
				Type: "totp",
				CreatedAt: time.Now().Unix(),
			},
		},
	}, nil
} 